# voltdb

./: .cproject  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Demo.desktop  Dockerfile  LICENSE-DEV.txt  LICENSE.voltdbclient  README  README.md  README.thirdparty  README.thirdparty.txt  STARTHERE.htm  build-client.xml  build-httpstream.xml  build-importers.xml  build-kafkaloader.xml  build-kafkastream.xml  build-socketstream.xml  build.py  build.xml  buildAllVolt  build_cmake.py  buildstring.txt  buildtools.py  deployment.xml  docker-entrypoint.sh  export-ddl-addedtable.xml  host1-20190726-16:16:20.029+0000-log.txt  jacoco-build.xml  manual-test-create.sql  manual-test-create.xml  microbenchmark-config.xml  migrate.xml  minify.sh  mm.sh  passingtests.sh  pom.xml  run.sh  temp  (+8 more)
src/ee/: .gitignore  CMakeLists.txt  VoltDB.cmake  org_voltdb_jni_ExecutionEngine.h  org_voltdb_utils_DBBPool.h  org_voltdb_utils_ThreadUtils.h  voltdbipc.cpp  voltdbipc.h  voltdbjni.cpp
src/ee/catalog/: .fake  authprogram.cpp  authprogram.h  catalog.cpp  catalog.h  cataloginteger.cpp  cataloginteger.h  catalogmap.h  catalogtype.cpp  catalogtype.h  cluster.cpp  cluster.h  column.cpp  column.h  columnref.cpp  columnref.h  connector.cpp  connector.h  connectordestinationinfo.cpp  connectordestinationinfo.h  connectortableinfo.cpp  connectortableinfo.h  constraint.cpp  constraint.h  constraintref.cpp  constraintref.h  database.cpp  database.h  group.cpp  group.h  groupref.cpp  groupref.h  host.cpp  host.h  index.cpp  index.h  materializedviewinfo.cpp  materializedviewinfo.h  partition.cpp  partition.h  (+22 more)
src/ee/common/: COWStream.cpp  COWStream.h  COWStreamProcessor.cpp  COWStreamProcessor.cpp.lcbak  COWStreamProcessor.h  COWStreamProcessor.h.lcbak  CatalogDelegate.hpp  CatalogUtil.h  CompactingStringPool.cpp  CompactingStringPool.h  CompactingStringStorage.cpp  CompactingStringStorage.h  ContiguousFastAllocator.hpp  DefaultTupleSerializer.cpp  DefaultTupleSerializer.h  DummyUndoQuantum.hpp  ELTSerializeIo.h  ElasticHashinator.h  ExecuteWithMpMemory.cpp  ExecuteWithMpMemory.h  ExportSerializeIo.h  FailureInjection.h  FastAllocator.hpp  FatalException.cpp  FatalException.hpp  FixUnusedAssertHack.h  FullTupleSerializer.cpp  FullTupleSerializer.h  Geography.hpp  GeographyPointValue.hpp  GeographyValue.hpp  HiddenColumn.cpp  HiddenColumn.h  HiddenColumnFilter.h  InterruptException.cpp  InterruptException.h  LargeTempTableBlockCache.cpp  LargeTempTableBlockCache.h  LargeTempTableBlockId.hpp  LegacyHashinator.h  (+88 more)
src/ee/execution/: ExecutorVector.cpp  ExecutorVector.h  FragmentManager.cpp  FragmentManager.h  HostResource.cpp  HostResource.h  IPCTopend.cpp  IPCTopend.h  JNITopend.cpp  JNITopend.h  ProgressMonitorProxy.cpp  ProgressMonitorProxy.h  VoltDBEngine.cpp  VoltDBEngine.h  abstractexecutor.cpp  sendexecutor.cpp  seqscanexecutor.h
src/ee/executors/: OptimizedProjector.cpp  OptimizedProjector.hpp  abstractexecutor.cpp  abstractexecutor.h  abstractjoinexecutor.cpp  abstractjoinexecutor.h  aggregateexecutor.cpp  aggregateexecutor.h  aggregateexecutor.hpp  commontableexecutor.cpp  commontableexecutor.h  deleteexecutor.cpp  deleteexecutor.h  distinctexecutor.cpp  distinctexecutor.h  executorfactory.cpp  executorfactory.h  executors.h  executorutil.cpp  executorutil.h  indexcountexecutor.cpp  indexcountexecutor.h  indexscanexecutor.cpp  indexscanexecutor.h  insertexecutor.cpp  insertexecutor.h  largeorderbyexecutor.cpp  largeorderbyexecutor.h  limitexecutor.cpp  limitexecutor.h  materializedscanexecutor.cpp  materializedscanexecutor.h  materializeexecutor.cpp  materializeexecutor.h  mergejoinexecutor.cpp  mergejoinexecutor.h  mergereceiveexecutor.cpp  mergereceiveexecutor.h  migrateexecutor.cpp  migrateexecutor.h  (+42 more)
src/ee/expressions/: abstractexpression.cpp  abstractexpression.h  bitwisefunctions.h  bitwisefunctions.h.orig  comparisonexpression.h  conjunctionexpression.h  constantvalueexpression.h  dateconstants.h  datefunctions.h  existssubqueryexpression.cpp  existssubqueryexpression.h  expressions.h  expressionutil.cpp  expressionutil.h  functionexpression.cpp  functionexpression.h  geofunctions.cpp  geofunctions.h  happenedafterexpression.h  hashrangeexpression.h  incomparisonexpression.cpp  incomparisonexpression.h  incomparisonexpression.hpp  inlistbuilderexpression.cpp  insubqueryexpression.cpp  insubqueryexpression.h  jsonfunctions.h  logicfunctions.h  numericfunctions.h  operatorexpression.cpp  operatorexpression.h  parametervalueexpression.cpp  parametervalueexpression.h  rankexpression.cpp  rankexpression.h  rankpercentageexpression.cpp  rankpercentageexpression.h  scalarvalueexpression.cpp  scalarvalueexpression.h  stringfunctions.h  (+10 more)
src/ee/indexes/: BinaryTreeMultiMapIndex.h  BinaryTreeUniqueIndex.h  CompactingHashMultiMapIndex.h  CompactingHashUniqueIndex.h  CompactingTreeMultiMapIndex.h  CompactingTreeUniqueIndex.h  CoveringCellIndex.cpp  CoveringCellIndex.h  HashTableMultiMapIndex.h  HashTableUniqueIndex.h  IndexStats.cpp  IndexStats.h  arrayuniqueindex.cpp  arrayuniqueindex.h  indexkey.h  tableindex.cpp  tableindex.h  tableindexfactory.cpp  tableindexfactory.h
src/ee/kipling/: GroupStore.cpp  GroupStore.h  GroupTables.h  TableFactory.cpp  TableFactory.h
src/ee/logging/: JNILogProxy.cpp  JNILogProxy.h  LogDefs.h  LogManager.cpp  LogManager.h  LogProxy.h  Logger.h  StdoutLogProxy.h
src/ee/plannodes/: PlanColumn.cpp  PlanColumn.h  SchemaColumn.cpp  SchemaColumn.h  abstractjoinnode.cpp  abstractjoinnode.h  abstractoperationnode.cpp  abstractoperationnode.h  abstractplannode.cpp  abstractplannode.h  abstractreceivenode.cpp  abstractreceivenode.h  abstractscannode.cpp  abstractscannode.h  aggregatenode.cpp  aggregatenode.h  commontablenode.cpp  commontablenode.h  deletenode.cpp  deletenode.h  distinctnode.cpp  distinctnode.h  indexcountnode.cpp  indexcountnode.h  indexscannode.cpp  indexscannode.h  insertnode.cpp  insertnode.h  limitnode.cpp  limitnode.h  materializedscanplannode.cpp  materializedscanplannode.h  (+50 more)
tests/ee/: .gitignore  CMakeLists.txt  harness.cpp  harness.h  harness_test.cpp
(+11713 files in other folders)
